--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-p{
-	color: white;
-	background-color: black;
-	padding: 30px;	
-	border-radius: 30px;		
-}
-
 body{
 	margin: 0;
 	font-family: 'Roboto', sans-serif;
@@ -138,4 +131,23 @@ th{
 	text-align: center;
 }
 
+
+
+
+.section{
+	background-color: #eeeeee;
+	padding-top: 60px;
+	padding-bottom: 60px;
+}
+
+	.section__container{
+		width: 1170px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.section__title{
+		text-align: center;
+		text-transform: uppercase;
+	}
 
