--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,14 @@ th{
 	background-color: #000;
 	padding: 10px;
 	text-align: center;
+	display: none;
 }
+
+	@media screen and (min-width: 768px){
+		.oferta{
+			display: block;
+		}
+	}
 
 
 	.oferta--especial{
@@ -104,9 +111,27 @@ th{
 		justify-content: space-between;
 	}
 
+	@media screen and (min-width: 1024px){
+
+		.header__burger{
+			display: none;
+		}
+	}
+
+
+	
+
 	.header__navigation{
-		display: flex;
+		display: none;
 		align-items: center;
+	}
+
+	@media screen and (min-width: 1024px){
+
+		.header__navigation{
+			display: flex
+		}
+
 	}
 
 	.header__form{
@@ -194,16 +219,29 @@ th{
 		margin-right: auto;
 		padding-left: 15px;
 		padding-right: 15px;
-		display: flex;
+	}
+
+	@media screen and (min-width: 768px){
+		.hero__content{
+			display: flex;
+		}
 	}
 
 	.hero__text{
-		width: 50%; /*  ¿¿¿ que porcentaje es 600px de 1170px ???  600/1170 */
 		padding: 30px;	
 	}
 
-	.hero__media{
-		width: 50%;
+
+	@media screen and (min-width: 768px){
+
+		.hero__text{
+			width: 50%; /*  ¿¿¿ que porcentaje es 600px de 1170px ???  600/1170 */
+		}
+
+		.hero__media{
+			width: 50%;
+		}
+
 	}
 
 	.hero__title{
@@ -327,6 +365,8 @@ th{
 
 .contactform{
 	max-width: 609px;
+	padding-left: 15px;
+	padding-right: 15px;
 	margin-left: auto;
 	margin-right: auto;
 }
