--- a/css/style.css
+++ b/css/style.css
@@ -452,5 +452,25 @@ th{
 	border:solid 5px #000;
 }
 
+/* =========================== *\
+	        M O D A L 
+\* =========================== */
+
+.modal{
+	width: 500px;
+	background-color: #fff;
+	box-shadow: 0 0 10px #000;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: none;
+	text-align: center;
+	padding: 40px;
+}
+	.modal__content{
+		margin-bottom: 30px;
+	}
+
 
 
